--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,22 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MovieDetailsActivity"
+            android:label="@string/action_movie_details"
+            android:parentActivityName=".PopularMoviesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".PopularMoviesActivity" />
         </activity>
         <activity
             android:name=".settings.SettingsActivity"
             android:label="@string/action_settings"
             android:parentActivityName=".settings.SettingsActivity"
-            android:theme="@style/SettingsTheme" >
+            android:theme="@style/SettingsTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".PopularMoviesActivity" />
